# aion-backend

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile-dev  README.md  architecture.md  docker-compose.elastic.yml  docker-compose.yml  dump.rdb  settings  todo.md  upload.sh  vector.toml
.cargo/: config.toml
config/: deploy.yml
configuration/: base.yaml  local.yaml
prisma/: .env  add-cards.js  biome.json  deck.js  index.js  package-lock.json  package.json  schema.prisma  sync-cards.js  uploadr2.js
prisma-cli/src/: main.rs
prisma/migrations/20230706062837_resources_field_on_hero/: migration.sql
prisma/migrations/20230901072944_leyline_updat/: migration.sql
prisma/migrations/20230901073439_stamina/: migration.sql
prisma/migrations/20230917124846_/: migration.sql
prisma/migrations/20231021065911_/: migration.sql
prisma/migrations/20231022080206_/: migration.sql
prisma/migrations/20231104143250_/: migration.sql
prisma/migrations/20231104161712_/: migration.sql
prisma/migrations/20231117164131_/: migration.sql
prisma/migrations/20231121104459_/: migration.sql
prisma/migrations/20240201082923_add_cost_to_actions/: migration.sql
prisma/migrations/20240206081453_/: migration.sql
prisma/migrations/20240207083459_float/: migration.sql
prisma/migrations/20240207113742_dd/: migration.sql
prisma/migrations/20240209060202_/: migration.sql
prisma/migrations/20240212092417_/: migration.sql
prisma/migrations/20240212134223_/: migration.sql
prisma/migrations/20240306203800_/: migration.sql
prisma/migrations/20240307051816_/: migration.sql
prisma/migrations/20240307053850_/: migration.sql
prisma/migrations/20240307054518_/: migration.sql
prisma/migrations/20240307065118_/: migration.sql
prisma/migrations/20240307085507_/: migration.sql
prisma/migrations/20240307090846_/: migration.sql
prisma/migrations/20240307093155_/: migration.sql
prisma/migrations/20240307093733_/: migration.sql
prisma/migrations/20240307102948_/: migration.sql
prisma/migrations/20240307103922_/: migration.sql
prisma/migrations/20240307104043_/: migration.sql
prisma/migrations/20240307104659_/: migration.sql
prisma/migrations/20240308055154_/: migration.sql
prisma/migrations/20240308071603_/: migration.sql
prisma/migrations/20240308072748_/: migration.sql
prisma/migrations/20240309083813_/: migration.sql
prisma/migrations/20240329085424_/: migration.sql
prisma/migrations/20240329091926_/: migration.sql
prisma/migrations/20240515085004_/: migration.sql
prisma/migrations/20240516053508_/: migration.sql
prisma/migrations/20240516185052_/: migration.sql
prisma/migrations/20240517040815_/: migration.sql
prisma/migrations/20240517092431_/: migration.sql
prisma/migrations/20240517102501_/: migration.sql
prisma/migrations/20240519103650_/: migration.sql
prisma/migrations/20240520083628_/: migration.sql
prisma/migrations/20240520112216_/: migration.sql
prisma/migrations/20240523050928_/: migration.sql
seed/: 2Npc.sql  3Quest.sql  4Action.sql  4ResourceType.sql  Action.sql  Common.sql  Epic.sql  Leyline.sql  MaterialType.sql  Quest.sql  Rare.sql  Region.sql  defaultdb.sql
seed/base/: Account.sql  Action.sql  ArmorEffect.sql  Attributes.sql  BaseStats.sql  Card.sql  CardEffect.sql  Deck.sql  Hero.sql  HeroCard.sql  Npc.sql  Quest.sql  Region.sql  ResourceType.sql  Stamina.sql  seed.sql
src/: configuration.rs  db_client.rs  fp_macros.rs  infra.rs  jsontoken.rs  lib.rs  logger.rs  main.rs  messenger.rs  prisma.rs  session_state.rs  startup.rs  storable.rs  test_helpers.rs  types.rs  utils.rs  webserver.rs
src/authentication/: middleware.rs  mod.rs  user.rs  verify.rs
src/endpoints/: auth.rs  cards.rs  combat.rs  combat_socket.rs  heroes.rs  quest.rs  regions.rs  response.rs  tasks.rs
src/events/: combat.rs  dispatcher.rs  game.rs  handle_channeling.rs  handle_costs.rs  handle_explore.rs  handle_lootbox.rs  handle_quest.rs  initialize.rs  persistant_wrapper.rs
src/handlers/: combat.rs  heroes.rs  quest.rs  regions.rs  response.rs  tasks.rs
src/models/: card_effect.rs  cards.rs  combatant.rs  date_times.rs  game_engine.rs  hero.rs  hero_combatant.rs  npc.rs  player_decision_maker.rs  quest.rs  region.rs  resources.rs  talent.rs  task.rs
src/repos/: cards.rs  game_engine.rs  game_engine_repo.rs  helpers.rs  hero.rs  hero_repo.rs  region_repo.rs  repo.rs
src/services/impls/: action_executor.rs  (+15 more)
src/tests/: combat_context.rs  helpers.rs
tests/: combat_test.rs
(+125 files in other folders)
