[package]
name = "aion_server"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full","test-util"] }
serde = "1.0.115"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features=false, features=["postgresql"] }
# tracing-actix-web = "0.7"
# tracing = "0.1.19"
config = { version = "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "1", features = ["v4", "serde"] }
# tracing-log = "0.1.1"
# tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
# tracing-bunyan-formatter = "0.3"
rand = { version = "0.8", features=["std_rng"] }
anyhow = "1.0.44"
# actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
secrecy = { version = "0.8", features = ["serde"] }
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
once_cell = "1.17.1"
tokio-test = "0.4.2"
lazy_static = "1.4.0"
derive_more = "0.99.17"
thiserror = "1.0.40"

[dev-dependencies]
serde_json = "1"

[workspace]
members = [
    "prisma-cli",
]  
resolver = "2"


[profile.dev]
opt-level = 0
