[package]
name = "aion_server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[[bin]]
name = "aion_server"
path = "src/main.rs"


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full", "test-util"] }
serde = "1.0.115"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
  "postgresql",
] }
tracing-actix-web = "0.7"
tracing = "0.1.19"
config = { version = "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
rand = { version = "0.8", features = ["std_rng"] }
anyhow = "1.0.44"
# actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
secrecy = { version = "0.8", features = ["serde"] }
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
once_cell = "1.17.1"
tokio-test = "0.4.2"
lazy_static = "1.4.0"
derive_more = "0.99.17"
thiserror = "1.0.40"
flume = "0.11.0"
fruently = "0.10.0"
tokio-tungstenite = "0.20.0"
serde_json = "1"
actix-cors = "0.6.4"
actix-web-actors = "4.2.0"
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
actix = "0.13.1"
futures = "0.3.28"
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
reqwest = { version = "0.12.2", features = ["json"] }
alloy-primitives = "0.7.5"
actix-web-lab = "0.20.2"

[workspace]
members = ["prisma-cli"]
resolver = "2"

[profile.dev]
opt-level = 0
[profile.dev.package."*"]
opt-level = 3
